k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doodl-docs-service
  labels:
    app: doodl-docs
spec:
  selector:
    app: doodl-docs
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
